tests/fixtures/invalid/bool_in_none.py
# Cannot use 'in' with Bool and None
x: bool = True in None
